# RAG_AGENT_FINANCE

./: .gitignore  README.md  ingestion.py  ingestion_retrival.py  main.py  pyproject.toml  retrival.py  streamlit_app.py
UI/: components.py  styles.py
graph/: consts.py  graph_flow.py  state.py
graph/chains/: answer_grader_chain.py  generate_chain.py  hallucination_grader_chain.py  retrieval_grader.py  retrieval_grader_chain.py
graph/chains/tests/: test_chains.py
graph/nodes/: __init__.py  fallback_node.py  generate_node.py  grade_documents_node.py  retrieve_node.py
