[project]
name = "rag-agent-jon-ibrani"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=25.12.0",
    "chromadb>=1.4.0",
    "isort>=7.0.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.6",
]
