[project]
name = "rag-agent-jon-ibrani"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=25.12.0",
    "chromadb>=1.4.0",
    "isort>=7.0.0",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.6",
    "pdfplumber>=0.11.9",
    "tiktoken>=0.12.0",
]
